k8s/mongo/mongodb-namesapce.yaml
apiVersion: v1
kind: Namespace
metadata:
    labels:
        app: mongodb
    name: mongodb
