k8s/mongo/mongoexpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mongo-express-deployment
    namespace: mongodb
    labels:
        app: mongo-express
spec:
    selector:
        matchLabels:
            app: mongo-express
    replicas: 1
    template:
        metadata:
            namespace: mongodb
            labels:
                app: mongo-express
        spec:
            containers:
                - name: mongo-express
                  image: mongo-express:latest
                  ports:
                      - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
    name: mongoexpress-service
    namespace: mongodb
spec:
    selector:
        app: mongo-express
    type: LoadBalancer
    ports:
        - protocol: TCP
          port: 8081
          targetPort: 8081
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: mongoexpress-ingress
    namespace: mongodb
spec:
    rules:
        - host: mongo.dfialho84.com.br
          http:
              paths:
                  - pathType: Prefix
                    path: /
                    backend:
                        service:
                            name: mongoexpress-service
                            port:
                                number: 8081
